--- a/css/nav.css
+++ b/css/nav.css
@@ -7,79 +7,91 @@
     text-decoration: none;
     
 }
-.contanier{
+nav{
+    background-color: #f44336;
+    color: #fff;
+    width: 25%;
+    height: 100%;
+    padding: 50px;
     display: flex;
 }
-.nav{
-    background-color: #f44336;
-    width: 25%;
-    height: 500vh;
-    position: relative;
+.container
+{
+    display: block;
 }
-.nav h2 , .nav li a{
+.logo
+{
+    font-size: 50px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+nav .list li a
+{
+    display: block;
     color: white;
+    margin: 10px 0;
+    padding: 10px;
 }
-.nav h2{
-    margin: 100px 40px ;
+nav .list li a:hover
+{
+    background-color: white;
+    color: #000;
 }
-.nav li{
-    margin: 30px 40px ;
+.checkbtn
+{
+    font-size: 30px;
+    color: white;
+    cursor: pointer;
+    display: none;
 }
-.nav li a:hover{
-    color: blue;
+#check
+{
+    display: none;
 }
-.nav img{
-    position: absolute;
-    display: none; 
-}
-@media (max-width:992px){
-    .contanier{
-        /* display: block; */
-        margin-top: 0;
-        display: flex;
-    }
-    .nav{
-        background-color: #f44336;
+@media (max-width: 992px){
+    nav 
+    {
+        padding: 10px;
         width: 100%;
         height: 50px;
         position: relative;
     }
-    .nav li a{
-        color: #fff;
-        /* display: none; */
-    }
-    .nav li{
-        background-color: #f44336;
-        text-align: center;
-    }
-    .nav ul{
-        transform: translate(30px,40px);
-        display: none;
-    }
-    .nav h2 , .nav li{
-        margin: 0 40px ;
-        padding: 10px;
-        font-size: 20px;
-        transform: translatex(-30px);
-    }
-    .nav img{
-    position: absolute;
-    display: inline-block;
-    top: 0;
-    width: 50px;
-    right: 0;
-    cursor:pointer ;
-    filter:invert(1)
-    }
-    img:hover ul{
+    .checkbtn
+    {
         display: block;
-        z-index: 100000000;
-
     }
-
-}
-@media (max-width:275px){
-    .nav h2{
-        font-size: 15px;
+    .list 
+    {
+        position: fixed;
+        width: 50%;
+        background-color:  #f44336;
+        text-align: left;
+        top: 50px;
+        left: -100%;
+        transition: all .5s;
+    }
+    .list li
+    {
+        display: block;
+    }
+    .list li a
+    {
+        font-size: 20px;
+    }
+    a:hover, a.active
+    {
+        background: white;
+        color: black;
+    }
+    .logo
+    {
+        position: absolute;
+        top: 10px;
+        left: 60px;
+        font-size: 25px;
+        font-weight: 600;
+    }
+    #check:checked ~ ul{
+        left: 0;
     }
 }
